updated the link info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Welcome to weather forecast</h1>
     <footer>
-        Coded by Ikedoji Anne
+      This project is  Coded by
+      <a href="https://github.com/ikedoji45anne" target="_blank"> Ikedoji Anne</a> 
+      and <a href="https://github.com/ikedoji45anne/Weather-forecast" target="_blank">open sourced on Github</a> 
+      is <a href="https://vercel.com/ikedoji45annes-projects/weather-forecast" target="_blank">hosted on Vercel</a> 
     </footer>
     
 </body>
