Added html to the project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Welcome to weather forecast</h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city" required/>
+            <input type="submit" value="search">
+        </form>
+    </header>
+    <main>
+        <div>
+    <h1>Paris</h1>
+    <p>
+        Friday 22:13,overcast clouds
+        <br/>
+        Humidity:92%, Wind: 2.57km/h
+
+    </p>
+  </div>
+  <div>
+    ⛅ 12°C
+  </div>
+ </main>
     <footer>
       This project is  Coded by
       <a href="https://github.com/ikedoji45anne" target="_blank"> Ikedoji Anne</a> 
