Styled the main container and added custom font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;0,900;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
+<div class="weather-app">
 <body>
     <header>
         <form>
@@ -32,6 +37,7 @@
       and <a href="https://github.com/ikedoji45anne/Weather-forecast" target="_blank">open sourced on Github</a> 
       is <a href="https://vercel.com/ikedoji45annes-projects/weather-forecast" target="_blank">hosted on Vercel</a> 
     </footer>
+ </div>
     
 </body>
 </html>
