Added the basic css

--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 <div class="weather-app">
 <body>
     <header>
-        <form>
-            <input type="search" placeholder="Enter a city" required/>
-            <input type="submit" value="search">
+        <form class="search- form">
+            <input type="search" placeholder="Enter a city" required class="search-form-input"/>
+            <input type="submit" value="search" class="search-form-button">
         </form>
     </header>
     <main>
-        <div>
-    <h1>Paris</h1>
-    <p>
+        <div class="weather-app-data">
+         <div>
+    <h1 class="weather-app-city">Paris</h1>
+    <p class="weather-app-details">
         Friday 22:13,overcast clouds
         <br/>
-        Humidity:92%, Wind: 2.57km/h
+        Humidity:<strong>92%</strong>, Wind:<strong> 2.57km/h</strong>
 
     </p>
   </div>
-  <div>
-    ⛅ 12°C
+  <div class="weather-app-container">
+   <Div class="weather-app-icon">⛅</Div> 
+   <div class="weather-app-temperature"> 12</div>
+   <div class="weather-app-unit">°C</div>
   </div>
+</div>
  </main>
     <footer>
       This project is  Coded by
