Added the basic search engine no Api

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <div class="weather-app">
 <body>
     <header>
-        <form class="search- form">
-            <input type="search" placeholder="Enter a city" required class="search-form-input"/>
+        <form class="search- form" id="search-form">
+            <input type="search" placeholder="Enter a city" required class="search-form-input" id="search-form-input"/>
             <input type="submit" value="search" class="search-form-button">
         </form>
     </header>
     <main>
         <div class="weather-app-data">
          <div>
-    <h1 class="weather-app-city">Paris</h1>
+    <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
     <p class="weather-app-details">
         Friday 22:13,overcast clouds
         <br/>
@@ -42,6 +42,7 @@
       is <a href="https://vercel.com/ikedoji45annes-projects/weather-forecast" target="_blank">hosted on Vercel</a> 
     </footer>
  </div>
+ <script src="src/index.js"></script>
     
 </body>
 </html>
