Added the functionalities with the Api

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="weather-app-data">
          <div>
-    <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
+    <h1 class="weather-app-city" id="weather-app-city"></h1>
     <p class="weather-app-details">
         Friday 22:13,overcast clouds
         <br/>
@@ -31,7 +31,7 @@
   </div>
   <div class="weather-app-container">
    <Div class="weather-app-icon">⛅</Div> 
-   <div class="weather-app-temperature"> 12</div>
+   <div class="weather-app-temperature" id="temperature"></div>
    <div class="weather-app-unit">°C</div>
   </div>
 </div>
