--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
          <div>
     <h1 class="weather-app-city" id="weather-app-city"></h1>
     <p class="weather-app-details">
-        Friday 22:13,overcast clouds
+       <span id="time"></span> <span id="description"></span> 
         <br/>
-        Humidity:<strong>92%</strong>, Wind:<strong> 2.57km/h</strong>
+        Humidity:<strong id="humidity"></strong>, Wind:<strong id="wind-speed"></strong>
 
     </p>
   </div>
