Injected the icon url into the js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </p>
   </div>
   <div class="weather-app-container">
-   <Div class="weather-app-icon">⛅</Div> 
+   <Div id="icon">
+    
+   </Div> 
    <div class="weather-app-temperature" id="temperature"></div>
    <div class="weather-app-unit">°C</div>
   </div>
