--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;0,900;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <div class="weather-app">
@@ -35,9 +37,24 @@
    </Div> 
    <div class="weather-app-temperature" id="temperature"></div>
    <div class="weather-app-unit">°C</div>
-  </div>
+</div>
+
 </div>
  </main>
+ <div class="weather-forecast">
+    <div class="row">
+        <div class="col-2">
+           <div class="weather-forecast-date">Thur</div> 
+        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+             alt="" width="45"/>
+             <div class="Weather-forecast-temperature">
+            <span class="Weather-forecast-temperature-max"> 18</span> 
+            <span class="Weather-forecast-temperature-min">12</span>
+            </div>
+        </div>
+    </div>
+
+ </div>
     <footer>
       This project is  Coded by
       <a href="https://github.com/ikedoji45anne" target="_blank"> Ikedoji Anne</a> 
