injected the forecast to the js

--- a/index.html
+++ b/index.html
@@ -41,25 +41,15 @@
 
 </div>
  </main>
- <div class="weather-forecast">
-    <div class="row">
-        <div class="col-2">
-           <div class="weather-forecast-date">Thur</div> 
-        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-             alt="" width="45"/>
-             <div class="Weather-forecast-temperature">
-            <span class="Weather-forecast-temperature-max"> 18</span> 
-            <span class="Weather-forecast-temperature-min">12</span>
-            </div>
-        </div>
-    </div>
+ <div class="weather-forecast" id="forecast">
+    
 
  </div>
     <footer>
       This project is  Coded by
       <a href="https://github.com/ikedoji45anne" target="_blank"> Ikedoji Anne</a> 
       and <a href="https://github.com/ikedoji45anne/Weather-forecast" target="_blank">open sourced on Github</a> 
-      is <a href="https://vercel.com/ikedoji45annes-projects/weather-forecast" target="_blank">hosted on Vercel</a> 
+      is <a href="https://vercel.com/ikedoji45annes-projects/weather-forecast/deployments" target="_blank">hosted on Vercel</a> 
     </footer>
  </div>
  <script src="src/index.js"></script>
